--- a/index.html
+++ b/index.html
@@ -115,38 +115,40 @@ display:block;
 
 <body class="bg" style="overflow:hidden;">
 
-<div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
+<div class="bg">
+     <div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
 
-<div class="container">
-  <div class="dropup">
-    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
-    <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li><a href="#"></a></li>
-      <li><a href="#">Tops</a></li>
-      <li><a href="#">Accessories</a></li>
-      <li class="divider"></li>
-      <li><a href="#">Dresses</a></li>
-    </ul>
-  </div>
-</div>
+     <div class="container">
+       <div class="dropup">
+         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
+         <span class="caret"></span></button>
+         <ul class="dropdown-menu">
+           <li><a href="#"></a></li>
+           <li><a href="#">Tops</a></li>
+           <li><a href="#">Accessories</a></li>
+           <li class="divider"></li>
+           <li><a href="#">Dresses</a></li>
+         </ul>
+       </div>
+     </div>
 
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+     <!-- Overlay effect when opening sidebar on small screens -->
+     <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<div id="scroll" height="80"class="w3-container w3-center w3-red" style="width:100%;font-weight:bold;">
-<ul>
-<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-</ul>
-</div>
+     <div id="scroll" height="80"class="w3-container w3-center w3-red" style="width:100%;font-weight:bold;">
+     <ul>
+     <li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     <li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+     </ul>
+     </div>
+   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
