--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif;}
 .center {
     margin: auto;
-    width: 60%;
+    width: 100%;
     border: 3px solid #73AD21;
     padding: 10px;
 }
+canvas {
+    padding: 0;
+    margin: auto;
+    display: block;
+    width: 100%;
+    height: 60%;
+    position:absolute;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
@@ -79,7 +88,7 @@ display:block;
     background-image: url("fashionShow.jpg");
     /* Full height */
     /* Center and scale the image nicely */
-    
+
     background-repeat: no-repeat;
     background-size: cover;
 	adding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
@@ -87,7 +96,7 @@ display:block;
   margin: 0; height: 100%; overflow: hidden
 }
 </style>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
 <head>
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
@@ -110,14 +119,16 @@ display:block;
   <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">Share</a>
   <span class="w3-button w3-right">Get Outfit</span>
 </header>
+
 </head>
 
 
 <body style="overflow:hidden;">
 
 <div class="bg">
-     <div class="w3-center"><img src="Model.png" alt="Agac'i Model" height="300" width="150"></div>
-
+  <canvas class="canvas" width="200px" height="100%" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas>
+<script src="script.js"></script>
      <div class="container">
        <div class="dropup">
          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
@@ -132,9 +143,9 @@ display:block;
        </div>
      </div>
 
-     
+
    </div>
-	
+
 	<div id="scroll" height="80"class="w3-container w3-center w3-red" style="width:100%;font-weight:bold;">
      <ul>
      <li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
