--- a/index.html
+++ b/index.html
@@ -9,28 +9,20 @@
 <style>
 head,body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif;}
 .center {
-    margin: 0px;
-    width: 100%;
+    margin: auto;
+    width: 60%;
     border: 3px solid #73AD21;
     padding: 10px;
 }
-canvas {
-    padding: 0px;
-    margin: auto;
-    display: block;
-    width: 100%;
-    height: 60%;
-    position:absolute;
-}
-
 img {
     max-width: 100%;
     max-height: 100%;
+    height: 100%;
 }
 head {
 	postion:fixed;
 }
-body{
+body {
   padding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
   padding-bottom: 0px; /*50px for the height of the bottom navbar*/
   margin: 0; height: 100%; overflow: hidden
@@ -82,24 +74,8 @@ color:#FFF;
 padding:5px 0 0;
 display:block;
 }
-
-.bg {
-    /* The image used */
-    background-image: url("fashionShow.jpg");
-    /* Full height */
-    /* Center and scale the image nicely */
-
-    background-repeat: no-repeat;
-    background-size: cover;
-	adding-top: 70px; /*50px for the height of the navbar + 37px for the offset*/
-  padding-bottom: 0px; /*50px for the height of the bottom navbar*/
-  margin: 0; height: 100%; overflow: hidden
-}
 </style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
+
 <head>
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
@@ -122,49 +98,57 @@ display:block;
   <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">Share</a>
   <span class="w3-button w3-right">Get Outfit</span>
 </header>
-
 </head>
 
 
 <body style="overflow:hidden;">
 
-<div class="bg">
-  <canvas class="canvas" width="200px" height="1%" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas>
-<script src="script.js"></script>
-     <div class="container">
-       <div class="dropup">
-         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
-         <span class="caret"></span></button>
-         <ul class="dropdown-menu">
-           <li><a href="#"></a></li>
-           <li><a href="#">Tops</a></li>
-           <li><a href="#">Accessories</a></li>
-           <li class="divider"></li>
-           <li><a href="#">Dresses</a></li>
-         </ul>
-       </div>
-     </div>
+<div class="w3-center"><div class="sketchfab-embed-wrapper"><iframe width=100% height="400px" src="https://sketchfab.com/models/ce18b0f58cba47e2b1f34a50ea31c348/embed?autospin=0.2&amp;autostart=1&amp;preload=1" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 
+<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+    <a href="https://sketchfab.com/models/ce18b0f58cba47e2b1f34a50ea31c348?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Zhenya</a>
+    by <a href="https://sketchfab.com/itseez3d?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">itSeez3D</a>
+    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+</p>
+</div></div>
+.parent{overflow:hidden;}
+<div id="scroll" height="80px" class="w3-container">
+  <div class="dropup">
+    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#"></a></li>
+      <li onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</li>
+      <li><a href="#">Accessories</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Dresses</a></li>
+    </ul>
+  </div>
+</div>
 
-   </div>
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-	<div id="scroll" height="80"class="w3-container w3-center w3-red" style="width:100%;font-weight:bold;">
-     <ul>
-     <li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     <li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-     </ul>
-     </div>
+<div id="scroll" height="80"class="w3-center w3-red" style="width:100%;font-weight:bold;">
+<ul>
+<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+</ul>
+</div>
+<script>
+function clickedTops {
 
+}
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>">
+
 </body>
 </html>
