--- a/index.html
+++ b/index.html
@@ -91,23 +91,10 @@ display:block;
 
 <head>
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
-  <div class="w3-container">
-    <h3 class="w3-padding-64"><b>Company<br>Name</b></h3>
-  </div>
-  <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Showcase</a>
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Designers</a>
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Packages</a>
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-  </div>
-</nav>
+
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-pink w3-xlarge w3-padding">
+<header class="w3-container w3-top  w3-pink w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-pink w3-margin-right" onclick="w3_open()">Share</a>
   <span class="w3-button w3-right">Get Outfit</span>
 </header>
@@ -117,14 +104,13 @@ display:block;
 
 <div class="sketchfab-embed-wrapper model" width=100% ><iframe style="width:100vw" height="385px" src="https://sketchfab.com/models/ce18b0f58cba47e2b1f34a50ea31c348/embed?autospin=0.2&amp;autostart=1&amp;preload=1" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div>
 
-<div class="dropup w3-left two">
+<div class="dropdown w3-left two">
   <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Jeans
   <span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li onclick="document.getElementById('myImage').src='pic_bulbon.gif'"><a href="#">Pants</a></li>
-    <li ></li>
+    <li onclick="clickTop()"><a>Shirts</a></li>
     <li class="divider"></li>
-    <li><a href="#">Accessories</a></li>
+    <li onclick="clickJean()"><a>Jeans</a></li>
     <li class="divider"></li>
     <li><a href="#">Dresses</a></li>
   </ul>
@@ -137,19 +123,46 @@ display:block;
 
 <div id="scroll" class="w3-left w3-pink" style="width:100%;font-weight:bold;">
 <ul>
-<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
-<li><a href="#"><img src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item1" src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item2"src="jean2.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item3"src="jean3.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item4"src="jean4.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item5"src="jean5.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item6"src="jean6.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item7"src="jean7.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item8"src="jean8.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
+<li><a href="#"><img id="item9"src="jean1.jpg" alt="" height="100" width="100"><span>Jeans Name</span></a></li>
 </ul>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
 
+
+
+    function clickTop()
+    {
+      for (var i = 1; i < 10; i++) {
+        var s = "item";
+        s = s + i;
+        var image =  document.getElementById(s);
+          image.src = "top1.jpg";
+      }
+    }
+    function clickJean()
+    {
+      for (var i = 1; i < 10; i++) {
+        var s = "item";
+        s = s + i;
+        var j = "jean";
+        j = j + i;
+        j = j + ".jpg";
+        var image =  document.getElementById(s);
+          image.src = j;
+      }
+    }
+
+
+</script>
 </body>
 </html>
